--- a/pages/index.html
+++ b/pages/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <title>index</title>
   </head>
   <body>
@@ -97,7 +98,7 @@
           </div>
           </div>
           <div class="col">
-            <div class="theme-card">
+            <div class="theme-card pb-sm-8">
             <picture>
               <source media="(min-width: 992px)" srcset="../assets/images/theme-7.png">
               <img src="/assets/images/theme-7-sm.png" alt="hots-7" class="w-100">
@@ -108,14 +109,111 @@
         </div>
       </section>
 
-      <section>
-        
+      <section class="container">
+        <div class="row">
+          <div class="col-md-4 d-sm-none d-md-block">
+            <div class="d-flex flex-column justify-content-between h-100 py-lg-10 py-md-6">
+              <h2 class="mb-auto">精選文章</h2>
+              <div class="mt-auto">
+                <div class="mb-5"> 
+                  <span class="pe-2">1</span>
+                  /
+                  <span class="ps-2">3</span>
+                </div>
+                <div class="d-flex align-items-center">
+                  <button type="button" class="btn btn-outline-primary-400 con-btn me-4">
+                    <i class="bi bi-arrow-left"></i>
+                  </button>
+                  <div class="line me-4"></div>
+                  <button class="btn btn-outline-primary-400 con-btn">
+                    <i class="bi bi-arrow-right"></i>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-8 d-sm-none d-md-block">
+            <div class="py-lg-10 py-md-6 d-flex justify-content-end">
+              <div class="card border-0 border-bottom rounded-0 rounded-top me-lg-8 me-md-4">
+                <picture>
+                  <source media="(min-width: 992px)" srcset="../assets/images/articles-1.png">
+                  <img src="/assets/images/articles-1-sm.png" alt="articles-1-sm" class="card-img-top">
+                </picture>
+                <div class="card-body px-0 d-flex flex-column justify-content-between">
+                  <div>
+                    <h5 class="card-title text-gray-400 mb-1">私人島嶼的露營奇遇記</h5>
+                    <p class="card-text text-gray-400 mb-5">遠離塵囂,用全新的眼光重塑生活的舒適本味。徜徉在環山綠野間,在這處隱世私家別墅裡,盡情領略池畔優閒時光,
+                      任林間微風撫面,聆聽花鳥嘶啞之音,重拾內心深處的寧靜安詳...</p>
+                  </div>
+                  <div>
+                    <a href="#" class="stretched-link text-secondary-200">Read More</a>
+                  </div>
+                </div>
+              </div>
+
+            <div class="card border-0 border-bottom rounded-0 rounded-top">
+              <picture>
+                <source media="(min-width: 992px)" srcset="../assets/images/articles-2.png">
+                <img src="/assets/images/articles-2-sm.png" alt="articles-2-sm" class="card-img-top">
+              </picture>
+              <div class="card-body px-0 d-flex flex-column justify-content-between">
+                <div>
+                <h5 class="card-title text-gray-400 mb-1">窺探米其林三星主廚的絕密手藝</h5>
+                <p class="card-text text-gray-400 mb-5">
+                  在這間隱世餐廳,來一場味蕾與靈魂的盛宴。幽微燈火下,透過巨匠大師的獨門料理,領略食材中蘊藏的大自然馨香脈絡。
+                  營造只屬於你我的私密小宇宙,沉浸其中,品嘗人生至臻至美的風味...</p>
+              </div>
+                <div class="d-flex justify-content-between align-items-end">
+                  <div class="mt-auto"><a href="#" class="stretched-link text-secondary-200">Read More</a></div>
+                <p class="bg-primary-300 text-primary-400 px-2 rounded">會員專屬</p>
+              </div>
+              </div>
+            </div>
+            </div>
+          </div>
+      </div> 
+      </section>
+
+      <!--精選文章sm-->
+      <section class="container">
+        <div class="row d-none d-sm-block d-md-none">
+          <h2 class="mb-5">精選文章</h2>
+          <div>
+            <div class="card border-0 border-bottom rounded-0 rounded-top mb-8">
+              <img src="/assets/images/articles-1-sm.png" class="w-100 mb-5" alt="...">
+              <div class="card-body">
+                <h5 class="card-title text-gray-400 mb-1">私人島嶼的露營奇遇記</h5>
+                <p class="card-text text-gray-400 mb-5">遠離塵囂,用全新的眼光重塑生活的舒適本味。
+                  徜徉在環山綠野間,在這處隱世私家別墅裡,盡情領略池畔優閒時光,
+                  任林間微風撫面,聆聽花鳥嘶啞之音,重拾內心深處的寧靜安詳...</p>
+                  <a href="#" class="stretched-link text-secondary-200 mb-5">Read More</a>
+              </div>
+            </div>
+          </div>
+          <div class="mt-auto d-flex justify-content-between align-items-center mb-6">
+            <div class="text-middle"> 
+              <span class="pe-2">1</span>
+              /
+              <span class="ps-2">3</span>
+            </div>
+            <div class="d-flex align-items-center">
+              <button type="button" class="btn btn-outline-primary-400 con-btn me-4">
+                <i class="bi bi-arrow-left"></i>
+              </button>
+              <div class="line me-4"></div>
+              <button class="btn btn-outline-primary-400 con-btn">
+                <i class="bi bi-arrow-right"></i>
+              </button>
+            </div>
+          </div>
+        </div>
       </section>
 
       <section class="bg-primary-200">
-        <div class="container position-relative py-lg-10">
+        <div class="container position-relative py-8 py-lg-10">
           <div class="hito-content d-flex flex-column align-items-center">
-            <h3 class="fs-lg-4 fs-6 mb-4 ">\ 母親節強檔活動 /</h3>
+            <h3 class="fs-lg-4 fs-6 mb-4 momtext">\ 母親節強檔活動 /</h3>
           <h2 class="fs-lg-2 mb-4">家庭訂閱方案限時 7 折</h2>
           <ul>
             <li class="list-unstyled fs-6 text-primary-400 mb-3">
@@ -140,9 +238,215 @@
           <button class="btn btn-secondary-200 fs-lg-5 text-white" type="button">
             我想了解
           </button>
+          <div class="position-absolute bottom-0 end-0 d-lg-none ">
+            <img src="/assets/images/bg-2-sm.png" alt="">
+          </div>
           </div>
         </div>
       </section>
+
+      <div class="bg-primary-100">
+      <section class="container">
+        <div class="pt-10 mb-lg-7 mb-sm-5">
+          <h2>大家都在看</h2>
+        </div>
+        <div class="row">
+          <div class="col-lg-3 d-flex">
+            <ul class="nav d-flex flex-column me-5 py-lg-5">
+              <li class="nav-item">
+                <a class="nav-link active text-gray-500 py-lg-3 ps-lg-3 pe-lg-8" id="list-home-list" data-bs-toggle="list" href="#list-home" 
+                role="tab" aria-controls="list-home">．酒精路跑地圖</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-gray-500 py-lg-3" id="list-profile-list" data-bs-toggle="list" href="#list-profile" 
+                role="tab" aria-controls="list-profile">．台北拉麵圖鑑</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-gray-500 py-lg-3" id="list-messages-list" data-bs-toggle="list" href="#list-messages" 
+                role="tab" aria-controls="list-messages">．海島自由行</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-gray-500 py-lg-3" id="list-settings-list" data-bs-toggle="list" href="#list-settings"
+                role="tab" aria-controls="list-settings">．短天數出國推薦</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-gray-500 py-lg-3" id="list-weekend-list" data-bs-toggle="list" href="#list-weekend"
+                role="tab" aria-controls="list-weekend">．週末露營趣</a>
+              </li>
+            </ul>
+            <div class="list-group" id="list-tab" role="tablist">
+            </div>
+          </div>
+          <div class="col-lg-9 bg-white">
+            <div class="tab-content" id="nav-tabContent">
+              <div class="tab-pane fade show active mt-lg-7 mx-6" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
+                <h5 class="mt-lg-5 text-secondary-200 mb-lg-5 my-sm-3 mt-sm-3 mb-sm-2">酒精路跑地圖</h5>
+                <div class="mb-lg-7 mb-sm-3">
+                  <p class="mb-4">｜城市酒吧人氣榜,盤點當紅熱門酒吧</p>
+                  <p class="mb-4">｜你要的調酒師在這裡！五月全台酒吧客座活動整理</p>
+                  <p>｜台南老宅手工酒藏,尋味百年人文釀意</p>
+                </div>
+                <div class="hots-img d-flex mb-3">
+                  <img class="img-fluid w-25 d-none d-lg-block" src="/assets/images/hots-1.png" alt="hots-1">
+                  <img class="img-fluid w-25 d-none d-lg-block" src="/assets/images/hots-2.png" alt="hots-2">
+                  <img class="img-fluid w-25 d-none d-lg-block" src="/assets/images/hots-3.png" alt="hots-3">
+                  <img class="img-fluid w-25 d-none d-lg-block" src="/assets/images/hots-4.png" alt="hots-4">
+                </div>
+                <div>
+                <img class="d-lg-none w-100 mb-sm-3" src="/assets/images/hots-1-sm.png" alt="hots-1-sm">
+                </div>
+                  <div class="d-flex justify-content-between py-lg-5">
+                  <div class="d-flex mb-3">
+                    <div class="rounded rounded-3 pe-3"><p class="bg-primary-300 px-1">#夜貓行程</p></div>
+                    <div class="rounded rounded-3 pe-3"><p class="bg-primary-300 px-1">#barhopping</p></div>
+                    <div class="rounded rounded-3 pe-3"><p class="bg-primary-300 px-1">#全台酒吧</p></div>
+                  </div>
+                  <div class="mb-lg-7 mb-sm-3">
+                     <a class="text-secondary-200" href="#">
+                      View More
+                      <i class="bi bi-arrow-right ps-1"></i>
+                    </a>
+                  </div>
+              </div>
+              </div>
+
+              <div class="tab-pane fade mt-lg-7 mx-7" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">
+                <h5 class="mt-lg-5 text-secondary-200 mb-lg-5">台北拉麵圖鑑</h5>
+                <div class="mb-lg-7">
+                  <p class="mb-4">｜城市酒吧人氣榜,盤點當紅熱門酒吧</p>
+                  <p class="mb-4">｜你要的調酒師在這裡！五月全台酒吧客座活動整理</p>
+                  <p>｜台南老宅手工酒藏,尋味百年人文釀意</p>
+                </div>
+                <div class="hots-img d-flex mb-3">
+                  <img class="img-fluid w-25 d-none d-md-block" src="/assets/images/hots-3-sm.png" alt="hots-1">
+                  <img class="d-md-none" src="/assets/images/hots-3-sm.png" alt="hots-1-sm">
+                  <img class="img-fluid w-25 d-none d-md-block" src="/assets/images/hots-3-sm.png" alt="hots-2">
+                  <img class="img-fluid w-25 d-none d-md-block" src="/assets/images/hots-3-sm.png" alt="hots-3">
+                  <img class="img-fluid w-25 d-none d-md-block" src="/assets/images/hots-3-sm.png" alt="hots-4">
+                </div>
+                  <div class="d-flex justify-content-between py-lg-5">
+                  <div class="d-flex">
+                    <div class="rounded rounded-3 pe-3"><p class="bg-primary-300 px-1">#雞白湯</p></div>
+                    <div class="rounded rounded-3 pe-3"><p class="bg-primary-300 px-1">#拉麵</p></div>
+                    <div class="rounded rounded-3 pe-3"><p class="bg-primary-300 px-1">#台北美食</p></div>
+                  </div>
+                  <div class="mb-lg-7">
+                     <a class="text-secondary-200" href="#">
+                      View More
+                      <i class="bi bi-arrow-right ps-2"></i>
+                    </a>
+                  </div>
+              </div>
+              </div>
+              <div class="tab-pane fade mt-lg-7 mx-7" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">
+                <h5 class="mt-lg-5 text-secondary-200 mb-lg-5">海島自由行</h5>
+                <div class="mb-lg-7">
+                  <p class="mb-4">｜私島慢活島嶼生活 - 在熱帶天堂品...</p>
+                  <p class="mb-4">｜海島漂流記 - 在陽光、沙灘和比基...</p>
+                  <p>｜島嶼蹤跡 - 揭開加勒比海上世外桃...</p>
+                </div>
+                <div class="hots-img d-flex mb-3">
+                  <img class="img-fluid w-25 d-none d-md-block" src="/assets/images/hots-4-sm.png" alt="hots-1">
+                  <img class="d-md-none" src="/assets/images/hots-4-sm.png" alt="hots-1-sm">
+                  <img class="img-fluid w-25 d-none d-md-block" src="/assets/images/hots-4-sm.png" alt="hots-2">
+                  <img class="img-fluid w-25 d-none d-md-block" src="/assets/images/hots-4-sm.png" alt="hots-3">
+                  <img class="img-fluid w-25 d-none d-md-block" src="/assets/images/hots-4-sm.png" alt="hots-4">
+                </div>
+                  <div class="d-flex justify-content-between py-lg-5">
+                  <div class="d-flex">
+                    <div class="rounded rounded-3 pe-3"><p class="bg-primary-300 px-1">#熱帶國家</p></div>
+                    <div class="rounded rounded-3 pe-3"><p class="bg-primary-300 px-1">#海邊</p></div>
+                    <div class="rounded rounded-3 pe-3"><p class="bg-primary-300 px-1">#無敵海景</p></div>
+                  </div>
+                  <div class="mb-lg-7">
+                     <a class="text-secondary-200" href="#">
+                      View More
+                      <i class="bi bi-arrow-right ps-2"></i>
+                    </a>
+                  </div>
+              </div>
+              </div>
+              <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">
+                <h5 class="mt-lg-5 text-secondary-200 mb-lg-5">短天數出國推薦</h5>
+                <div class="mb-lg-7">
+                  <p class="mb-4">｜72小時東京遊走 - 當個時尚東京通</p>
+                  <p class="mb-4">｜48小時曼谷遊玩全攻略 </p>
+                  <p>｜三天兩夜賞櫻微醺東京</p>
+                </div>
+                <div class="hots-img d-flex mb-3">
+                  <img class="img-fluid w-25 d-none d-md-block" src="/assets/images/hots-5-sm.png" alt="hots-1">
+                  <img class="d-md-none" src="/assets/images/hots-5-sm.png" alt="hots-1-sm">
+                  <img class="img-fluid w-25 d-none d-md-block" src="/assets/images/hots-5-sm.png" alt="hots-2">
+                  <img class="img-fluid w-25 d-none d-md-block" src="/assets/images/hots-5-sm.png" alt="hots-3">
+                  <img class="img-fluid w-25 d-none d-md-block" src="/assets/images/hots-5-sm.png" alt="hots-4">
+                </div>
+                  <div class="d-flex justify-content-between py-lg-5">
+                  <div class="d-flex">
+                    <div class="rounded rounded-3 pe-3"><p class="bg-primary-300 px-1">#說走就走</p></div>
+                    <div class="rounded rounded-3 pe-3"><p class="bg-primary-300 px-1">#出國玩</p></div>
+                    <div class="rounded rounded-3 pe-3"><p class="bg-primary-300 px-1">#東亞</p></div>
+                  </div>
+                  <div class="mb-lg-7">
+                     <a class="text-secondary-200" href="#">
+                      View More
+                      <i class="bi bi-arrow-right ps-2"></i>
+                    </a>
+                  </div>
+              </div>
+              </div>
+              <div class="tab-pane fade" id="list-weekend" role="tabpanel" aria-labelledby="list-weekend-list">
+                <h5 class="mt-lg-5 text-secondary-200 mb-lg-5">週末露營趣</h5>
+                <div class="mb-lg-7">
+                  <p class="mb-4">｜週末說走就走露營記</p>
+                  <p class="mb-4">｜城市野營日記</p>
+                  <p>｜和寵物去露營 - 大自然之旅的雙倍...</p>
+                </div>
+                <div class="hots-img d-flex mb-3">
+                  <img class="img-fluid w-25 d-none d-md-block" src="/assets/images/hots-2-sm.png" alt="hots-1">
+                  <img class="d-md-none" src="/assets/images/hots-2-sm.png" alt="hots-1-sm">
+                  <img class="img-fluid w-25 d-none d-md-block" src="/assets/images/hots-2-sm.png" alt="hots-2">
+                  <img class="img-fluid w-25 d-none d-md-block" src="/assets/images/hots-2-sm.png" alt="hots-3">
+                  <img class="img-fluid w-25 d-none d-md-block" src="/assets/images/hots-2-sm.png" alt="hots-4">
+                </div>
+                  <div class="d-flex justify-content-between py-lg-5">
+                  <div class="d-flex">
+                    <div class="rounded rounded-3 pe-3"><p class="bg-primary-300 px-1">#戶外</p></div>
+                    <div class="rounded rounded-3 pe-3"><p class="bg-primary-300 px-1">#露營控</p></div>
+                    <div class="rounded rounded-3 pe-3"><p class="bg-primary-300 px-1">#凹豆</p></div>
+                  </div>
+                  <div class="mb-lg-7">
+                     <a class="text-secondary-200" href="#">
+                      View More
+                      <i class="bi bi-arrow-right ps-2"></i>
+                    </a>
+                  </div>
+              </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      </section>
+
+
+      <section class="container">
+        <div>
+          <div class="d-flex justify-content-between py-lg-10">
+            <h5>品味生活</h5>
+            <div class="d-flex align-items-center">
+              <button type="button" class="btn btn-outline-primary-400 con-btn me-4">
+                <i class="bi bi-arrow-left"></i>
+              </button>
+              <div class="line me-4"></div>
+              <button class="btn btn-outline-primary-400 con-btn">
+                <i class="bi bi-arrow-right"></i>
+              </button>
+            </div>
+          </div>
+
+        </div>
+      </section>
+
 
       <section class="container py-10">
         <div class="row">
