--- a/pages/index.html
+++ b/pages/index.html
@@ -12,7 +12,7 @@
     <%- include('./layout/header'); -%>
 
     <main>
-      <section class="container container-md my-lg-10 my-sm-8 gx-lg-0">
+      <section class="container my-lg-10 my-sm-8 g-0">
       <div class="mb-4 rounded-3 position-relative">
         <picture>
           <source media="(min-width: 992px)" srcset="../assets/images/banner.png">
@@ -31,8 +31,8 @@
       </div>
     </section>
 
-      <section class="container py-lg-10 py-sm-6">
-        <h2 class="mb-5">熱門主題</h2>
+      <section class="container py-lg-10">
+        <h2 class="mb-5 mt-8">熱門主題</h2>
         <div class="row row-cols-lg-4 row-cols-md-2 row-cols-1 gy-5">
           <div class="col">
             <div class="theme-card">
@@ -111,8 +111,8 @@
 
       <section class="container">
         <div class="row">
-          <div class="col-md-4 d-sm-none d-md-block">
-            <div class="d-flex flex-column justify-content-between h-100 py-lg-10 py-md-6">
+          <div class="col-md-4 d-none d-lg-block d-xl-none">
+            <div class="d-flex flex-column justify-content-between h-100 py-lg-10 py-sm-6">
               <h2 class="mb-auto">精選文章</h2>
               <div class="mt-auto">
                 <div class="mb-5"> 
@@ -133,7 +133,7 @@
             </div>
           </div>
 
-          <div class="col-md-8 d-sm-none d-md-block">
+          <div class="col-md-8 d-none d-lg-block d-xl-none">
             <div class="py-lg-10 py-md-6 d-flex justify-content-end">
               <div class="card border-0 border-bottom rounded-0 rounded-top me-lg-8 me-md-4">
                 <picture>
@@ -177,8 +177,8 @@
 
       <!--精選文章sm-->
       <section class="container">
-        <div class="row d-none d-sm-block d-md-none">
-          <h2 class="mb-5">精選文章</h2>
+        <div class="row d-lg-none d-xl-block">
+          <h2 class="mb-5 mt-8">精選文章</h2>
           <div>
             <div class="card border-0 border-bottom rounded-0 rounded-top mb-8">
               <img src="/assets/images/articles-1-sm.png" class="w-100 mb-5" alt="...">
@@ -245,13 +245,13 @@
         </div>
       </section>
 
-      <div class="bg-primary-100">
-      <section class="container">
-        <div class="pt-10 mb-lg-7 mb-sm-5">
+      <section class="bg-primary-100">
+      <div class="container">
+        <div class="pt-lg-10 mb-7 mt-sm-8 mb-sm-5">
           <h2>大家都在看</h2>
         </div>
         <div class="row">
-          <div class="col-lg-3 d-flex">
+          <div class="col-lg-3 d-flex d-none d-lg-block d-xl-none">
             <ul class="nav d-flex flex-column me-5 py-lg-5">
               <li class="nav-item">
                 <a class="nav-link active text-gray-500 py-lg-3 ps-lg-3 pe-lg-8" id="list-home-list" data-bs-toggle="list" href="#list-home" 
@@ -280,7 +280,7 @@
           <div class="col-lg-9 bg-white">
             <div class="tab-content" id="nav-tabContent">
               <div class="tab-pane fade show active mt-lg-7 mx-6" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
-                <h5 class="mt-lg-5 text-secondary-200 mb-lg-5 my-sm-3 mt-sm-3 mb-sm-2">酒精路跑地圖</h5>
+                <h5 class="mt-lg-5 text-secondary-200 mb-5 my-sm-3 mt-sm-3 mb-sm-2">酒精路跑地圖</h5>
                 <div class="mb-lg-7 mb-sm-3">
                   <p class="mb-4">｜城市酒吧人氣榜,盤點當紅熱門酒吧</p>
                   <p class="mb-4">｜你要的調酒師在這裡！五月全台酒吧客座活動整理</p>
@@ -293,20 +293,26 @@
                   <img class="img-fluid w-25 d-none d-lg-block" src="/assets/images/hots-4.png" alt="hots-4">
                 </div>
                 <div>
-                <img class="d-lg-none w-100 mb-sm-3" src="/assets/images/hots-1-sm.png" alt="hots-1-sm">
+                <img class="d-lg-none w-100 mb-3" src="/assets/images/hots-1-sm.png" alt="hots-1-sm">
                 </div>
-                  <div class="d-flex justify-content-between py-lg-5">
+                  <div class="d-lg-flex justify-content-lg-between py-lg-5">
                   <div class="d-flex mb-3">
                     <div class="rounded rounded-3 pe-3"><p class="bg-primary-300 px-1">#夜貓行程</p></div>
                     <div class="rounded rounded-3 pe-3"><p class="bg-primary-300 px-1">#barhopping</p></div>
                     <div class="rounded rounded-3 pe-3"><p class="bg-primary-300 px-1">#全台酒吧</p></div>
                   </div>
-                  <div class="mb-lg-7 mb-sm-3">
+                  <div class="mb-lg-7 mb-sm-3 d-none d-lg-block d-xl-none">
                      <a class="text-secondary-200" href="#">
                       View More
                       <i class="bi bi-arrow-right ps-1"></i>
                     </a>
                   </div>
+                  <div class="mb-lg-7 mb-sm-3 d-lg-none d-xl-block d-flex justify-content-center">
+                    <a class="text-secondary-200" href="#">
+                     View More
+                     <i class="bi bi-arrow-right ps-1"></i>
+                   </a>
+                 </div>
               </div>
               </div>
 
@@ -424,16 +430,16 @@
               </div>
             </div>
           </div>
-        </div>
+       </div>
       </div>
-      </section>
+    </section>
 
 
       <section class="container">
         <div>
-          <div class="d-flex justify-content-between py-lg-10">
-            <h5>品味生活</h5>
-            <div class="d-flex align-items-center">
+          <div class="d-flex justify-content-between py-lg-10 mt-8 mb-5">
+            <h5 class="fs-lg-2 fs-sm-4">品味生活</h5>
+            <div class="d-lg-flex align-items-center d-none d-lg-block d-xl-none">
               <button type="button" class="btn btn-outline-primary-400 con-btn me-4">
                 <i class="bi bi-arrow-left"></i>
               </button>
@@ -447,12 +453,13 @@
           <div class="row">
             <div class="col-lg-4">
             <div class="card border-0">
-            <h2 class="card-title fs-lg-1 text-primary-400 mb-lg-6">食.</h2>
-            <img src="/assets/images/life-1.png" class="card-img-top mb-lg-6" alt="...">
+            <h2 class="card-title fs-lg-1 text-primary-400 mb-lg-6 mb-5">食.</h2>
+            <img src="/assets/images/life-1.png" class="card-img-top mb-lg-6 d-none d-lg-block d-xl-none" alt="...">
+            <img class="d-lg-none d-xl-block" src="/assets/images/life-1-sm.png" alt="life-1-sm">
               <div class="card-body px-0">
-                <p class="card-text mb-lg-4">｜米其林三星主廚的那些絕活傳奇</p>
-                <p class="card-text mb-lg-4">｜探秘成都的地道川味秘技與魅力</p>
-                <p class="card-text mb-lg-6">｜義大利釀酒師對於酒的堅持執著</p>
+                <p class="card-text mb-4">｜米其林三星主廚的那些絕活傳奇</p>
+                <p class="card-text mb-4">｜探秘成都的地道川味秘技與魅力</p>
+                <p class="card-text mb-6">｜義大利釀酒師對於酒的堅持執著</p>
                 <div class="d-flex justify-content-center">
                  <a href="#" class="stretched-link text-secondary-200">View More
                  <i class="bi bi-arrow-right ps-2"></i>
@@ -464,12 +471,13 @@
 
             <div class="col-lg-4">
             <div class="card border-0">
-            <h2 class="card-title fs-lg-1 text-primary-400 mb-lg-6">藝.</h2>
-            <img src="/assets/images/life-2.png" class="card-img-top mb-lg-6" alt="...">
+            <h2 class="card-title fs-lg-1 text-primary-400 mb-lg-6 mb-5">藝.</h2>
+            <img src="/assets/images/life-2.png" class="card-img-top mb-lg-6 d-none d-lg-block d-xl-none" alt="...">
+            <img class="d-lg-none d-xl-block" src="/assets/images/life-2-sm.png" alt="life-2-sm">
               <div class="card-body px-0"> 
-                <p class="card-text mb-lg-4">｜解構教主級時裝設計大師的獨特美學</p>
-                <p class="card-text mb-lg-4">｜當代攝影師鏡頭中的光影離奇</p>
-                <p class="card-text mb-lg-4">｜帶你穿縮中世紀，夏季文藝復興展</p>
+                <p class="card-text mb-4">｜解構教主級時裝設計大師的獨特美學</p>
+                <p class="card-text mb-4">｜當代攝影師鏡頭中的光影離奇</p>
+                <p class="card-text mb-4">｜帶你穿縮中世紀，夏季文藝復興展</p>
                 <div class="d-flex justify-content-center">
                  <a href="#" class="stretched-link text-secondary-200">View More
                  <i class="bi bi-arrow-right ps-2"></i>
@@ -480,13 +488,14 @@
             </div>
 
             <div class="col-lg-4">
-            <div class="card border-0">
-            <h2 class="card-title fs-lg-1 text-primary-400 mb-lg-6">旅.</h2>
-            <img src="/assets/images/life-3.png" class="card-img-top mb-lg-6" alt="...">
+            <div class="card border-0 mb-md-8">
+            <h2 class="card-title fs-lg-1 text-primary-400 mb-lg-6 mb-5">旅.</h2>
+            <img src="/assets/images/life-3.png" class="card-img-top mb-lg-6 d-none d-lg-block d-xl-none" alt="...">
+            <img class="d-lg-none d-xl-block" src="/assets/images/life-3-sm.png" alt="life-2-sm">
               <div class="card-body px-0">
-                <p class="card-text mb-lg-4">｜遠離喧囂,偶探巴塔哥尼亞終界</p>
-                <p class="card-text mb-lg-4">｜東京深度六區,帶你細品極簡魅力</p>
-                <p class="card-text mb-lg-4">｜專賣奇珍異寶的東歐地下夜市</p>
+                <p class="card-text mb-4">｜遠離喧囂,偶探巴塔哥尼亞終界</p>
+                <p class="card-text mb-4">｜東京深度六區,帶你細品極簡魅力</p>
+                <p class="card-text mb-4">｜專賣奇珍異寶的東歐地下夜市</p>
                 <div class="d-flex justify-content-center">
                  <a href="#" class="stretched-link text-secondary-200">View More
                  <i class="bi bi-arrow-right ps-2"></i>
@@ -503,9 +512,12 @@
       <section class="bg-primary-200">
        <div class="container py-10">
         <div class="row">
-          <div class="col-lg-6 d-lg-flex flex-column align-items-start justify-content-center">
-            <h5 class="text-gray-400 mb-lg-3">今天又不知道要去哪裡了嗎？</h5>
-            <h2 class="text-gray-500 mb-lg-6">Vivre 給你意想不到的生活風格提案</h2>
+          <div class="col-lg-6 d-lg-flex flex-column align-items-start justify-content-center text-center text-lg-start">
+            <h5 class="text-gray-400 mb-3">今天又不知道要去哪裡了嗎？</h5>
+            <h2 class="text-gray-500 mb-6">
+              Vivre 
+              <br class="d-lg-none mb-1">
+              給你意想不到的生活風格提案</h2>
             <button class="btn btn-secondary-200 fs-lg-5 text-white" type="button">
             馬上訂閱
             <span class="material-symbols-outlined ms-1 align-text-bottom">
@@ -584,21 +596,60 @@
               </div>
               </li>
             </ul>
+
+            <!--md-->
+          <ul class="d-flex my-8">
+            <li class="list-unstyled mt-7 d-lg-none d-xl-block me-5">
+              <div class="position-relative">
+                <p class="position-absolute d-flex align-items-center top-0 start-0 ms-3 
+                          translate-middle text-secondary-300 bg-white ms-2 
+                          translate-middle-y fs-5 py-1 px-2 rounded border border-secondary-100 fw-bold">
+                  <i class="bi bi-caret-right-fill me-1 fs-6 align-top"></i>
+                  人氣行程
+                  <div class="position-absolute d-flex justify-content-between bottom-0 start-0 end-0 ps-2 pb-3 text-white
+                  projects">
+                  <p>親子露營要帶什麼？</p>
+                  <i class="bi bi-arrow-right pe-2"></i>
+                  </div>
+                </p>
+                <a href="#" class="stretched-link">
+              <img src="/assets/images/projects-2.png" alt=""></a>
+            </div>
+            </li>
+
+            <li class="list-unstyled d-lg-none d-xl-block mt-7">
+              <div class="position-relative">
+                <p class="position-absolute d-flex align-items-center top-0 start-0 ms-3 translate-middle 
+                          text-secondary-300 bg-white ms-2 translate-middle-y fs-5 py-1 px-2 
+                          rounded border border-secondary-100 fw-bold">
+                  <i class="bi bi-caret-right-fill me-1 fs-6 align-top"></i>
+                  編輯推薦
+                  <div class="position-absolute d-flex justify-content-between bottom-0 start-0 end-0 ps-2 pb-3 text-white">
+                    <p>山女孩的健行筆記</p>
+                    <i class="bi bi-arrow-right pe-2"></i>
+                  </div>
+                </p>
+                <a href="#" class="stretched-link">
+                <img src="/assets/images/projects-1.png" alt=""></a>
+              </div>
+              </li>
+            </ul>  
           </div>
         </div>
       </div>
       </section>
 
       <section class="container">
-        <div class="d-flex justify-content-between my-lg-10">
-          <h2 class="text-gray-500">想看什麼主題由你決定！</h2>
-          <div class="d-flex flex-column align-items-end">
-            <h5 class="text-gray-500 mb-3">想看什麼主題由你決定！</h5>
+        <div class="d-flex flex-column align-items-center flex-md-row justify-content-md-between align-items-md-start my-lg-10 my-8">
+          <h2 class="text-gray-500 mb-3">想看什麼主題由你決定！</h2>
+          <div class="d-flex flex-column align-items-md-end align-items-center">
+            <h5 class="text-gray-500 mb-lg-3 mb-6">歡迎投稿與我們分享</h5>
             <button class="btn btn-secondary-200 fs-lg-5 text-white" type="button">
-            馬上訂閱
+            聯絡我們
           </button>
           </div>
         </div>
+
       </section>
     </main>
 
