--- a/article.html
+++ b/article.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>about</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <title>所有文章</title>
     <script type="module" crossorigin src="/week6/assets/main-8f1ba859.js"></script>
     <link rel="stylesheet" href="/week6/assets/main-285185ec.css">
   </head>
@@ -26,10 +28,10 @@
         </div>
         <ul class="navbar-nav mb-2 mb-lg-0 ms-auto align-items-lg-center">
           <li class="nav-item ps-3">
-            <a class="nav-link p-lg-3 pb-6" aria-current="page" href="#">所有文章</a>
+            <a class="nav-link p-lg-3 pb-6" aria-current="page" href="article.html">所有文章</a>
           </li>
           <li class="nav-item ps-3">
-            <a class="nav-link p-lg-3 pb-6" href="#">訂閱方案</a>
+            <a class="nav-link p-lg-3 pb-6" href="plan.html">訂閱方案</a>
           </li>
           <li class="nav-item ps-3">
             <a class="nav-link p-lg-3 pb-6" href="#">關於我們</a>
@@ -43,7 +45,7 @@
         
       </div>
     </div>
-  </nav>    <h1>我是about</h1>
+  </nav>
     <footer>
     <div class="border-top"></div>
     <div class="container my-lg-5 my-4">
