--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         </div>
         <ul class="navbar-nav mb-2 mb-lg-0 ms-auto align-items-lg-center">
           <li class="nav-item ps-3">
-            <a class="nav-link p-lg-3 pb-6" aria-current="page" href="#">所有文章</a>
+            <a class="nav-link p-lg-3 pb-6" aria-current="page" href="article.html">所有文章</a>
           </li>
           <li class="nav-item ps-3">
-            <a class="nav-link p-lg-3 pb-6" href="#">訂閱方案</a>
+            <a class="nav-link p-lg-3 pb-6" href="plan.html">訂閱方案</a>
           </li>
           <li class="nav-item ps-3">
             <a class="nav-link p-lg-3 pb-6" href="#">關於我們</a>
